# job_crawler

./: .env.example  .gitignore  CONTEXT_BRIEF.md  FREE_DEPLOYMENT_PLAN.md  PROJECT_PLAN.md  PROJECT_STATUS.md  README.md  ROADMAP.md  SESSION_HANDOFF.md  TEAM_SYNC.md  package-lock.json  package.json  render.yaml
.github/workflows/: api-smoke.yml  collect-jobs.yml  db-bootstrap.yml
apps/api/: README.md  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: health.py  jobs.py  router.py
apps/api/app/core/: config.py
apps/api/app/db/: __init__.py  connection.py  jobs.py  migrate.py  seed.py  upsert.py
apps/api/app/db/migrations/: 0001_create_jobs.sql  __init__.py
apps/api/app/sample_data/: __init__.py
apps/api/app/services/: jobs.py
apps/api/tests/: test_db_jobs.py  test_health.py  test_jobs.py
apps/web/: README.md  index.html  next-env.d.ts  package-lock.json  package.json  tsconfig.json
apps/web/src/: App.tsx  main.tsx
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: api-health-panel.tsx  job-explorer.tsx
apps/web/src/fixtures/: sample-jobs.json
apps/web/src/lib/: config.ts  jobs.ts
crawler/: README.md  pyproject.toml  sources.example.json
crawler/crawler/: __init__.py  config.py  run.py  sources.py
docs/: context-management.md  crawling-policy.md  deployment-runbook.md  development-lanes.md  engineering-principles.md  mvp-implementation-strategy.md  pm-operating-checklist.md  requirements.md  verification-criteria.md
infra/: README.md  docker-compose.yml
scripts/: check-api-smoke.py  copy-web-dist.mjs
